Closed
Bug 965154
Opened 11 years ago
Closed 11 years ago
Make the global scope polluter work with WebIDL Window
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla30
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
Details
Attachments
(1 file)
|
4.09 KB,
patch
|
peterv
:
review+
|
Details | Diff | Splinter Review |
Just need to fix how it gets the window from the global.
| Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8367147 -
Flags: review?(peterv)
Comment 2•11 years ago
|
||
Comment on attachment 8367147 [details] [diff] [review]
Make the global scope polluter handle WebIDL Window objects.
Review of attachment 8367147 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/base/WindowNamedPropertiesHandler.cpp
@@ +9,5 @@
> #include "nsGlobalWindow.h"
> #include "nsHTMLDocument.h"
> #include "nsJSUtils.h"
> #include "xpcprivate.h"
> +#include "mozilla/dom/WindowBinding.h"
Nit: this list of includes is sorted
Comment 3•11 years ago
|
||
Comment on attachment 8367147 [details] [diff] [review]
Make the global scope polluter handle WebIDL Window objects.
Review of attachment 8367147 [details] [diff] [review]:
-----------------------------------------------------------------
::: dom/base/WindowNamedPropertiesHandler.cpp
@@ +101,5 @@
>
> nsDependentJSString str(aId);
>
> // Grab the DOM window.
> + nsGlobalWindow* win = GetWindowFromGlobal(global);;
Redundant semicolon.
Attachment #8367147 -
Flags: review?(peterv) → review+
| Assignee | ||
Comment 4•11 years ago
|
||
Fixed both nits and pushed: https://hg.mozilla.org/integration/mozilla-inbound/rev/3910ec9bec17
Flags: in-testsuite+
Whiteboard: [need review]
Target Milestone: --- → mozilla30
Comment 5•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•