Bug 965154.  Make the global scope polluter handle WebIDL Window objects.  r=peterv